(fix) theme/.../system.less: add minimal height to '.switchport-configuration' (aligns DSL extended info with other ports)

--- a/theme/page/controlPanel/control/system.less
+++ b/theme/page/controlPanel/control/system.less
@@ -81,6 +81,10 @@
     }
 
     .system__switchports-section {
+        .switchport-configuration {
+            min-height: 28px;
+        }
+
         .device-switchports__item {
             .icon--big-port,
             .icon--switchport {
